Enable PubSub tests - they work in GitHub Actions. Some refactoring.