@@ -1,14 +1,5 @@
 package uk.gov.ons.bulk.repository;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.util.List;
-import java.util.stream.Collectors;
-
 import org.junit.jupiter.api.Test;
 import org.junit.platform.suite.api.Suite;
 import org.junit.platform.suite.api.SuiteDisplayName;
@@ -16,10 +7,17 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
-
 import uk.gov.ons.bulk.entities.BulkInfo;
 import uk.gov.ons.bulk.entities.IdsBulkInfo;
 import uk.gov.ons.bulk.util.BulkServiceConstants.Status;
+
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @SpringBootTest
 @ActiveProfiles("test")
@@ -31,8 +29,8 @@ class BulkStatusRepositoryTest {
     @Autowired
     private BulkStatusRepository bulkStatusRepository;
     
-    private LocalDateTime ldt1 = LocalDateTime.parse("2022-07-04T16:36:58.944848");
-    private LocalDateTime ldt2 = LocalDateTime.parse("2022-07-05T12:42:58.944872");
+    private final LocalDateTime ldt1 = LocalDateTime.parse("2022-07-04T16:36:58.944848");
+    private final LocalDateTime ldt2 = LocalDateTime.parse("2022-07-05T12:42:58.944872");
     
 	@Test
 	public void testSaveJob() {
@@ -57,7 +55,7 @@ class BulkStatusRepositoryTest {
 	@Test
 	public void testQueryJob() {
 
-		BulkInfo result = bulkStatusRepository.queryJob(1).get(0);
+		BulkInfo result = bulkStatusRepository.queryJob(1).getFirst();
 		assertThat(result.getJobid()).isEqualTo(1);
 		assertThat(result.getUserid()).isEqualTo("bob");
 		assertThat(result.getStatus()).isEqualTo("in-progress");
@@ -69,7 +67,7 @@ class BulkStatusRepositoryTest {
 	@Test
 	public void testQueryIdsJob() {
 
-		IdsBulkInfo result = bulkStatusRepository.queryIdsJob(1).get(0);
+		IdsBulkInfo result = bulkStatusRepository.queryIdsJob(1).getFirst();
 		assertThat(result.getJobid()).isEqualTo(1);
 		assertThat(result.getIdsJobId()).isEqualTo("ids-job-1");
 		assertThat(result.getUserid()).isEqualTo("ids-user-x");
@@ -87,12 +85,12 @@ class BulkStatusRepositoryTest {
 		assertEquals(2, bulkInfos.size());
 		
 		bulkInfos.forEach(bulkInfo -> {	
-			assertEquals(bulkInfo.getUserid(), "mrrobot");
-			assertEquals(bulkInfo.getStatus(), "in-progress");
+			assertEquals("mrrobot", bulkInfo.getUserid());
+			assertEquals("in-progress", bulkInfo.getStatus());
 		});
 				
-		assertTrue(bulkInfos.stream().map(bulkInfo -> bulkInfo.getTotalrecs()).collect(Collectors.toList()).containsAll(List.of(348076L, 107L)));
-		assertTrue(bulkInfos.stream().map(bulkInfo -> bulkInfo.getRecssofar()).collect(Collectors.toList()).containsAll(List.of(2000L, 45L)));
+		assertTrue(bulkInfos.stream().map(BulkInfo::getTotalrecs).toList().containsAll(List.of(348076L, 107L)));
+		assertTrue(bulkInfos.stream().map(BulkInfo::getRecssofar).toList().containsAll(List.of(2000L, 45L)));
 	}
 	
 	@Test
@@ -103,13 +101,13 @@ class BulkStatusRepositoryTest {
 		assertEquals(2, idsBulkInfos.size());
 		
 		idsBulkInfos.forEach(bulkInfo -> {	
-			assertEquals(bulkInfo.getUserid(), "ids-user-y");
-			assertEquals(bulkInfo.getStatus(), "in-progress");
+			assertEquals("ids-user-y", bulkInfo.getUserid());
+			assertEquals("in-progress", bulkInfo.getStatus());
 		});
 				
-		assertTrue(idsBulkInfos.stream().map(idsBulkInfo -> idsBulkInfo.getIdsJobId()).collect(Collectors.toList()).containsAll(List.of("ids-job-2", "ids-job-3")));
-		assertTrue(idsBulkInfos.stream().map(idsBulkInfo -> idsBulkInfo.getTotalrecs()).collect(Collectors.toList()).containsAll(List.of(348076L, 107L)));
-		assertTrue(idsBulkInfos.stream().map(idsBulkInfo -> idsBulkInfo.getRecssofar()).collect(Collectors.toList()).containsAll(List.of(2000L, 45L)));
+		assertTrue(idsBulkInfos.stream().map(IdsBulkInfo::getIdsJobId).toList().containsAll(List.of("ids-job-2", "ids-job-3")));
+		assertTrue(idsBulkInfos.stream().map(BulkInfo::getTotalrecs).toList().containsAll(List.of(348076L, 107L)));
+		assertTrue(idsBulkInfos.stream().map(BulkInfo::getRecssofar).toList().containsAll(List.of(2000L, 45L)));
 	}
 	
 	@Test
@@ -118,11 +116,11 @@ class BulkStatusRepositoryTest {
 		List<IdsBulkInfo> idsBulkInfos = bulkStatusRepository.getIdsJob("ids-job-2");
 		
 		assertEquals(1, idsBulkInfos.size());
-		assertEquals(idsBulkInfos.get(0).getIdsJobId(), "ids-job-2");
-		assertEquals(idsBulkInfos.get(0).getUserid(), "ids-user-y");
-		assertEquals(idsBulkInfos.get(0).getStatus(), "in-progress");
-		assertEquals(idsBulkInfos.get(0).getRecssofar(), 2000L);
-		assertEquals(idsBulkInfos.get(0).getTotalrecs(), 348076L);
+		assertEquals("ids-job-2", idsBulkInfos.getFirst().getIdsJobId());
+		assertEquals("ids-user-y", idsBulkInfos.getFirst().getUserid());
+		assertEquals("in-progress", idsBulkInfos.getFirst().getStatus());
+		assertEquals(2000L, idsBulkInfos.getFirst().getRecssofar());
+		assertEquals(348076L, idsBulkInfos.getFirst().getTotalrecs());
 	}
 	
 	@Test
@@ -137,7 +135,7 @@ class BulkStatusRepositoryTest {
 		
 		bulkStatusRepository.updateStatus(2L, Status.RD);
 				
-		IdsBulkInfo result = bulkStatusRepository.queryIdsJob(2L).get(0);
+		IdsBulkInfo result = bulkStatusRepository.queryIdsJob(2L).getFirst();
 		assertThat(result.getJobid()).isEqualTo(2L);
 		assertThat(result.getIdsJobId()).isEqualTo("ids-job-2");
 		assertThat(result.getUserid()).isEqualTo("ids-user-y");
